--- a/config/local.yaml
+++ b/config/local.yaml
@@ -1,7 +1,8 @@
 env: "local" #local, dev, prod
 storage_path: "./storage/storage.db"
-http-server:
+http_server:
   address: "localhost:8082"
   timeout: 4s
   iddle_timeout: 60s
-
+  user: "myuser"
+  password: "mypassword"
